# kursach_OpenCV

./: CMakeLists.txt  main.cpp
